--- a/RNews/Views/Properties/Properties.cshtml
+++ b/RNews/Views/Properties/Properties.cshtml
@@ -18,8 +18,9 @@
                 <hr />
                 @Html.HiddenFor(m => m.PropertyViewModelId)
                 <div class="form-group row" id="name">
-                    <label for="user-property-name" class="col-sm-6 col-form-label font-weight-bold">Name:</label>
-                    <div class="col-sm-6" id="name-buttons">
+                    <label for="user-property-name" class="col-sm-3 col-form-label font-weight-bold">Name:</label>
+                    <div id="name-error" class="col-sm-6"></div>
+                    <div class="col-sm-3" id="name-buttons">
                         <button id="name-edit-button" class="btn btn-info btn-sm" tabindex="0"><i class="fas fa-pencil-alt"></i></button>
                         <button id="name-submit-button" class="btn btn-success btn-sm" tabindex="0"><i class="fas fa-check"></i></button>
                     </div>
